# sipe

./: .gitignore  AUTHORS  ChangeLog  HACKING  LICENSE  Makefile.am  Makefile.in  Makefile.mingw  NEWS  README  TODO  ___  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  git-build.sh  git-snapshot.sh  pidgin-sipe-1.3.4.wxs  pidgin-sipe.nsi  pidgin-sipe.spec  pidgin-sipe.wxs  siplcs.vcproj  siplcs.vcxproj  siplcs.vcxproj.filters
.tx/: config
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
contrib/SIPEAdiumPlugin/: ESPurpleSIPEAccount.m  ESSIPELibpurpleServicePlugin.h
contrib/adium-patches/: README.txt  adium-1.5.8-disable-ssl-mitigation.patch
contrib/dbus/: SipeHelper.pm  sipe-call-phone-number.pl  sipe-join-conference-uri.pl  sipe-join-conference-with-organizer-and-id.pl  sipe-join-conference-with-uri.pl  sipe-republish-calendar.pl  sipe-reset-status.pl
contrib/debian/: README.Debian  changelog  control  control.debian  control.maemo  copyright  docs  rules  watch
contrib/debug/: parse_log.pl  parse_valgrind.pl
contrib/maemo/: control
contrib/media-patches/: README.txt  farsight-Compatibility-with-OC2007.patch  farsight2_tcp_turn.patch  fs-codec.conf  libnice-Compatibility-with-OC2007-R2.patch  libnice-Compatibility-with-OC2007.patch  oc-disable-encryption.reg  (+12 more)
debian/: README.source  changelog  control  copyright  gbp.conf  pidgin-sipe.install  pidgin-sipe.lintian-overrides  pidgin-sipe.postinst  pidgin-sipe.postrm  pidgin-sipe.preinst  rules  watch
m4macros/: Makefile.am  Makefile.in  purple.m4
pixmaps/: Makefile.am  Makefile.common.am  Makefile.in  Makefile.mingw
pixmaps/emotes/sipe/: Makefile.am  sipe.theme.in  theme
po/: ChangeLog  LINGUAS  Makefile.mingw  POTFILES.in  ar.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  fr_CA.po  hi.po  hu.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pidgin-sipe.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  te.po  tr.po  transifex-pot-fixup.pl  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  Makefile.mingw  config.h.in  purple25-compat.h  sip-csta.c  sip-csta.h  sip-internal.h  sip-ntlm.c  sip-ntlm.h  sip-prefix.h  sip-sec-krb5.c  sip-sec-krb5.h  sip-sec-mech.h  sip-sec-ntlm.c  sip-sec-ntlm.h  sip-sec-sspi.c  sip-sec-sspi.h  sip-sec.c  sip-sec.h  sipe-cal.c  sipe-cal.h  sipe-chat.c  sipe-chat.h  sipe-conf.c  sipe-conf.h  sipe-dialog.c  sipe-dialog.h  sipe-ews.c  sipe-ews.h  sipe-nls.h  sipe-session.c  sipe-session.h  sipe-sign.c  sipe-sign.h  sipe-utils.c  sipe-utils.h  sipe.c  sipe.h  sipkrb5.c  (+6 more)
src/adium/: DCPurpleSIPEJoinChatViewController.h  DCPurpleSIPEJoinChatViewController.m  ESPurpleSIPEAccount.h  ESPurpleSIPEAccount.m  ESSIPEAccountViewController.h  ESSIPEAccountViewController.m  ESSIPELibpurpleServicePlugin.h  ESSIPELibpurpleServicePlugin.m  ESSIPEService.h  ESSIPEService.m  Info.plist  PurpleDefaultsSIPE.plist  README.Adium  SIPEAdiumPlugin_Prefix.pch  check_release.sh  find_adium_build.sh
src/adium/English.lproj/: DCPurpleSIPEJoinChatView.xib  ESSIPEAccountView.xib
src/adium/English.lproj/ESSIPEAccountView.nib/: designable.nib  keyedobjects.nib
src/adium/SIPEAdiumPlugin.xcodeproj/: project.pbxproj
src/adium/SIPEAdiumPlugin.xcodeproj/xcshareddata/xcschemes/: Build NSS libs.xcscheme  SIPEAdiumPlugin.xcscheme  pidgin-sipe.xcscheme
src/adium/xcconfigs/: Base.xcconfig  Debug-Release.xcconfig  Debug.xcconfig  NSS.xcconfig  Release.xcconfig  SIPEAdiumPlugin.xcconfig  libpidgin-sipe.xcconfig
src/api/: Makefile.am  Makefile.in  core-depurple.h  sipe-backend-debug.h  sipe-backend.h  sipe-common.h  sipe-core-api.h  sipe-core.h  sipe-media.h  sipe-mime.h  sipe-nls.h
src/core/: Makefile.am  Makefile.in  Makefile.mingw  http-conn.c  http-conn.h  libsiperc.rc.in  md4.c  md4.h  sdpmsg.c  sdpmsg.h  sip-csta.c  sip-csta.h  sip-sec-basic.c  sip-sec-basic.h  sip-sec-digest-tests.c  sip-sec-digest.c  sip-sec-digest.h  sip-sec-gssapi.c  sip-sec-gssapi.h  sip-sec-krb5.c  sip-sec-krb5.h  sip-sec-mech.h  sip-sec-negotiate.c  sip-sec-negotiate.h  sip-sec-ntlm-analyzer.c  sip-sec-ntlm-tests.c  sip-sec-ntlm.c  sip-sec-ntlm.h  sip-sec-sspi.c  sip-sec-sspi.h  sip-sec-tls-dsk.c  sip-sec-tls-dsk.h  sip-sec.c  sip-sec.h  sip-soap.c  sip-soap.h  sip-transport.c  sip-transport.h  sipe-applicationsharing.c  sipe-applicationsharing.h  (+115 more)
src/kopete/: Makefile.in
src/miranda/: INSTALL  miranda-backend.cpp  miranda-blist.c  miranda-buddy.c  miranda-chat.c  miranda-connection.c  miranda-debug.c  miranda-dnsquery.c  miranda-ft.c  miranda-groupchat.c  miranda-im.c  miranda-input.c  miranda-markup.c  miranda-media.c  miranda-network.c  miranda-notify.c  miranda-plugin.c  miranda-private.h  miranda-resource.h  miranda-schedule.c  miranda-search.c  miranda-setting.c  miranda-status.c  miranda-transport.c  miranda-user.c  miranda-utils.c  miranda-version.h  miranda.rc  sipe-miranda.c  sipe-miranda.cpp  sipe-miranda.h  vlc.c
src/purple/: Makefile.am  Makefile.in  core-depurple.h  pidgin-sipe.metainfo.xml  purple-applicationsharing.c  purple-appshare.c  purple-buddy.c  purple-chat.c  purple-connection.c  purple-crypt.c  purple-dbus-bindings.c  purple-dbus.c  purple-dbus.h  purple-debug.c  purple-digest.c  purple-dnsquery.c  purple-ft.c  purple-groupchat.c  purple-im.c  purple-markup.c  purple-media.c  purple-mime.c  purple-network.c  purple-notify.c  purple-plugin-common.c  purple-plugin.c  purple-plugin3.c  purple-private.h  purple-schedule.c  purple-search.c  purple-setting.c  purple-status.c  purple-transport.c  purple-user.c  sfb-handle-link.desktop  sipe-url-handler  sipe-url-handler.desktop  tests-load.c  tests.c
src/telepathy/: Makefile.am  Makefile.in  telepathy-buddy.c  telepathy-connection.c  telepathy-debug.c  telepathy-dnsquery.c  telepathy-main.c  telepathy-private.h  telepathy-protocol.c  telepathy-schedule.c  telepathy-search.c  telepathy-status.c  telepathy-stubs.c  telepathy-tls.c  telepathy-transport.c
src/telepathy/data/: Makefile.am  org.freedesktop.Telepathy.ConnectionManager.sipe.service.in  sipe.profile
telepathy-haze/: haze.manager.patch
(+50 files in other folders)
